# troy

fastapi/: .gitignore  Dockerfile  pyproject.toml
fastapi/src/python_fastapi/: api.py
fastapi/static/: index.html
