[project]
name = "python_fastapi"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.112.1",
    "aiofiles>=24.1.0",
    "uvicorn>=0.30.6",
    "psutil>=6.0.0",
    "pydantic-settings>=2.4.0",
    "asyncer>=0.0.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
    "ruff-lsp>=0.0.55",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_fastapi"]

[tool.ruff]
line-length = 120
